Configure app for network access
- Enable Vite dev server to bind to 0.0.0.0 for network accessibility
- Update backend CORS to accept all origins
- Configure frontend to use network IP (192.168.1.4) for API and WebSocket connections
- Allow app to be accessed from other devices on the local network

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -48,7 +48,7 @@ services:
       - MONGODB_DATABASE=messaging_platform
       - JWT_SECRET=${JWT_SECRET:-your-secret-key-change-in-production}
       - JWT_EXPIRY=24h
-      - CORS_ORIGINS=http://localhost:5173
+      - CORS_ORIGINS=*
       - SERVER_ID=server-1
     depends_on:
       - mongodb-init
@@ -62,8 +62,8 @@ services:
     ports:
       - "5173:5173"
     environment:
-      - VITE_API_URL=http://localhost:8080/api
-      - VITE_WS_URL=ws://localhost:8080/ws
+      - VITE_API_URL=http://192.168.1.4:8080/api
+      - VITE_WS_URL=ws://192.168.1.4:8080/ws
     depends_on:
       - backend
     volumes:
