chore: update environment variable files for backend and frontend configurations

--- a/.env.example
+++ b/.env.example
@@ -1,20 +1,20 @@
-# Backend Local Development Environment Variables
-# Copy this file to .env for local development (without Docker)
+# Docker Compose Environment Variables
+# Copy this file to .env and update the values for your environment
 
-# Server Configuration
+# Backend Configuration
 PORT=8080
 SERVER_ID=server-1
 ENVIRONMENT=development
 
-# MongoDB Configuration (for local development)
-MONGODB_URI=mongodb://localhost:27017
+# MongoDB Configuration (Docker networking)
+MONGODB_URI=mongodb://mongodb:27017
 MONGODB_DATABASE=messaging_platform
 
 # JWT Configuration
 JWT_SECRET=your-secret-key-change-this-in-production
 JWT_EXPIRY=24h
 
-# CORS Configuration (allow frontend local dev server)
+# CORS Configuration
 CORS_ORIGINS=http://localhost:5173
 
 # WebSocket Configuration
@@ -25,3 +25,7 @@ WS_MAX_MESSAGE_SIZE=1048576
 # Cache Configuration
 CACHE_TTL=5m
 CACHE_CLEANUP_INTERVAL=10m
+
+# Frontend Configuration
+VITE_API_URL=http://localhost:8080/api
+VITE_WS_URL=ws://localhost:8080/ws
