--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,2 +1,5 @@
+# Frontend Local Development Environment Variables
+# Copy this file to .env for local development (without Docker)
+
 VITE_API_URL=http://localhost:8080/api
 VITE_WS_URL=ws://localhost:8080/ws
